--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <div class="item active">
+      <div class="item active" style="--background: #ea3d41">
         <div class="title">Morango</div>
         <img src="./img/Morango.png" class="fruit">
         <img src="./img/Morango-refrigerante.png" class="refri">
